--- a/styles.css
+++ b/styles.css
@@ -16,34 +16,7 @@
     
   }      
     
-  @media screen and (max-width: 667px) {
-    .flex,  .btn, .email{
-      flex-direction: column;
-      padding: 0.5em;
-     margin-top: 10px;
-     margin-right: 10px;
-      margin-left: 30px;
-      border-radius: 7px;
-      text-align: left;
-      
-    }
-  
-  }
 
-
-
-    @media screen and (max-width: 1024px) {
-        .quick, .tech { 
-        
-      
-    
-      }
-
-
-
-
-    
-   
      
   
 
@@ -66,19 +39,27 @@
     margin-bottom: 12px;
   }
 
-  .list {
+  .list, .h3 {
+    display: flex;
+    flex-direction: column;
     list-style-type: none;
     font-size: small;
     margin: 1em;
+    gap: 0.7rem;
+    text-align: left;
+    
 
   }
 
   .email {
     border-radius: 5px;
-    width:  75%;
-    height: 25%;
+    width:  auto;
+    height: 30px;
     text-align: left;
+    box-shadow: none;
+    border: none;
     
+  
     
   }
 
@@ -86,18 +67,25 @@
     background-color: rgb(170, 72, 36);
     color: white;
     border-radius: 5px;
-    width: 75%;
-    height: 25%;
+    box-shadow: none;
+    border: none;
+    width: 75px;
+    height: 30px;
     text-align: center;
     
-  
   }
 
-  .Logo {
-    width: 10em;
-    height: 10em;
-    
-    
-    
-    
+      .Logo {
+       display: flex;
+       position: sticky;
+       bottom: 10;
+       margin-top: 20%;
+       width: 40%;
+       height: 25px;
+       
+       
+       
+
   }
+
+ 
