--- a/styles.css
+++ b/styles.css
@@ -95,8 +95,9 @@
          flex-direction: column; 
          align-items: flex-start;
          margin: 20px;
-         padding: 10px;
-         width: 70%;
+         padding: 20px;
+         width: 80%;
+         
       }
 
       .btn, .email{
@@ -111,7 +112,40 @@
       .sub, .quick, .tech, .Logo {
         margin-left: 30px;
       }
+
+      .h2{
+        font-size: small;
+      }
 }
   
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  .flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 100px;
+    width: 90%;
+    
+  }
+
+  .btn, .email {
+    display: inline;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 50%;
+    margin-bottom: 10px;
+  }
+
+  .sub, .quick, .tech, .Logo {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .Logo {
+    width: 120px;
+    height: auto;
+  }
+}
 
  
